@@ -45,14 +45,15 @@ public class ChangelogPrinter {
         Set<String> ruleIds =
                 config.getActiveRules().stream().map(QodanaRules::getRuleId).collect(Collectors.toSet());
         List<AnalyzerResult> activeRuleResults =
-                results.stream().filter(v -> ruleIds.contains(v.ruleID())).collect(Collectors.toList());
+                results.stream().filter(v -> ruleIds.contains(v.ruleID())).toList();
         StringBuilder sb = new StringBuilder();
         sb.append("# Bad smells\n");
         sb.append(String.format("I found %s bad smells:", activeRuleResults.size()))
                 .append("\n");
         for (AnalyzerResult result : activeRuleResults) {
 
-            sb.append("## " + result.ruleID())
+            sb.append("## ")
+                    .append(result.ruleID())
                     .append("\n")
                     .append(result.messageMarkdown())
                     .append("\n")
